[package]
name = "cch23-enchanted-humor"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
